[gd_scene load_steps=2 format=3 uid="uid://cy6ltlhn2n88p"]

[ext_resource type="Script" path="res://scripts/ui/game_ui/score.gd" id="1_g6x7x"]

[node name="Score" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_g6x7x")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 64
text = "0"

[connection signal="reset_score" from="." to="." method="_on_reset_score"]
[connection signal="update_score" from="." to="." method="_on_update_score"]
